[package]
name = "replay"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.10.2"
clap = "4.5.37"
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["full"] }
hyper-util = { version = "0.1.11", features = ["tokio"] }
owo-colors = "4.2.0"
reqwest = { version = "0.12.15", features = [
  "rustls-tls",
  "json",
], default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
