[package]
name = "replay"
version = "0.1.2"
edition = "2024"
description = "A simple HTTP request replay tool"
license = "Apache-2.0"
keywords = ["http", "replay", "cli"]
readme = "README.md"
repository = "https://github.com/tsirysndr/replay"
categories = ["command-line-utilities", "development-tools"]
authors = ["Tsiry Sandratraina <tsiry.sndr@rocksky.app>"]

[dependencies]
actix-web = "4.10.2"
clap = "4.5.37"
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["full"] }
hyper-util = { version = "0.1.11", features = ["tokio"] }
owo-colors = "4.2.0"
reqwest = { version = "0.12.15", features = [
  "rustls-tls",
  "json",
], default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
